# tools

./: Apt-get html  Apt-get.html  HKgenerateKey.html  README.md  add-user.sh  api-proxy.sh  autorestart.sh  clean-cpu.sh  cleanup.py  clone.sh  dawn.sh  depined.sh  despeed.sh  encrypt.sh  ende.py  exeos.sh  grass.sh  kivanet.sh  litas.sh  mining.sh  mygate.sh  ngrok-vps.sh  nodego.sh  nodepay.sh  requirements.txt  setup.cfg  setup.py  sparkchain.sh  teneo.sh  tes.html  ubuntu.sh  vps-tune.sh
.github/workflows/: main.yml  pypi.yml  pypi_rem.yml  reset.yml  shell.yml
mytools/: __init__.py  ai.py  button.py  chatbot.py  database.py  encrypt.py  ende.py  getuser.py  logger.py  misc.py  system_instruction.py  text.py  trans.py
