[metadata]
name = mytoolsID
version = attr: mytools.__version__
description = Library of @NorSodikin
long_description = file: README.md
long_description_content_type = text/markdown
author = NorSodikin
author_email = admin@NorSodikin.com
url = https://t.me/NorSodikin
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
python_requires = >=3.8, <3.13

[options]
packages = find:
install_requires = 
    -r requirements.txt

[options.extras_require]
dev =
    wheel
